<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".second_activity"
android:background="@color/background">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/selection"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="140dp"/>

    <EditText
        android:id="@+id/inputValues"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/radius"
        android:hint="@string/input"
        android:paddingLeft="15dp"
        android:textSize="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/radius"
            android:paddingLeft="15dp"/>

        <Spinner
            android:id="@+id/spinnerIn"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/radius"
            android:paddingLeft="15dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/radius"
        android:hint="@string/rez"
        android:paddingLeft="15dp" />

    <Button
        android:id="@+id/result_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="12dp"
        android:textColor="@color/white"
        android:background="@drawable/radius30"
        android:text="@string/v"
        android:onClick="Q"
        android:layout_marginTop="165dp"
        android:textSize="18dp"
        android:textStyle="bold"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
