<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:background="@drawable/logo"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="55dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/log"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:textSize="18dp"
            android:background="@drawable/radius"
            android:hint="@string/login"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:textSize="18dp"
            android:background="@drawable/radius"
            android:hint="@string/password"
            android:layout_marginBottom="65dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="12dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/radius30"
            android:text="@string/start"
            android:onClick="onClickStart"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>